--- a/QRTag/pubspec.yaml
+++ b/QRTag/pubspec.yaml
@@ -1,4 +1,4 @@
-name: covid_tag
+name: QRTag
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  fast_qr_reader_view:
   flutter:
     sdk: flutter
 
