--- a/qrtag-server/package.json
+++ b/qrtag-server/package.json
@@ -11,7 +11,7 @@
     "express": "~4.16.1",
     "socket.io": "^3.1.1"
   },
-  "type": "commonjs",
+  "type": "module",
   "devDependencies": {
     "nodemon": "^2.0.7"
   }
