--- a/QRTag/pubspec.yaml
+++ b/QRTag/pubspec.yaml
@@ -23,13 +23,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  web_socket_channel:
 
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  web_socket_channel: ^2.0.0
 
 dev_dependencies:
   flutter_test:
