--- a/QRTag/pubspec.yaml
+++ b/QRTag/pubspec.yaml
@@ -23,8 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  web_socket_channel:
-
+  socket_io_client: ^2.0.0-beta.2
 
 
   # The following adds the Cupertino Icons font to your application.
