--- a/QRTag/pubspec.yaml
+++ b/QRTag/pubspec.yaml
@@ -23,7 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  socket_io_client: ^2.0.0-beta.2
+  
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -35,6 +35,9 @@ dev_dependencies:
     sdk: flutter
   qr_code_scanner: ^0.3.5
   permission_handler: 5.1.0
+  flutter_redux: ^0.5.3 
+  redux: ^3.0.0
+  socket_io_client: ^2.0.0-beta.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
