--- a/QRTag/pubspec.yaml
+++ b/QRTag/pubspec.yaml
@@ -37,7 +37,7 @@ dev_dependencies:
   permission_handler: 5.1.0
   flutter_redux: ^0.5.3 
   redux: ^3.0.0
-  socket_io_client: ^2.0.0-beta.2
+  web_socket_channel:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
