--- a/qrtag-server/package.json
+++ b/qrtag-server/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app.js",
-    "watch": "nodemon app.js"
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "watch": "nodemon app.js",
+    "watch:tsc": "tsc -w"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -14,7 +16,13 @@
   },
   "type": "module",
   "devDependencies": {
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.11",
+    "@types/lodash": "^4.14.168",
+    "@types/websocket": "^1.0.1",
+    "@types/ws": "^7.4.0",
     "cors": "^2.8.5",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "typescript": "^4.1.5"
   }
 }
