--- a/qrtag-server/package.json
+++ b/qrtag-server/package.json
@@ -14,7 +14,7 @@
     "lodash": "^4.17.20",
     "ws": "^7.4.3"
   },
-  "type": "module",
+  "type": "commonjs",
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
