--- a/qrtag-server/package.json
+++ b/qrtag-server/package.json
@@ -23,6 +23,7 @@
     "@types/ws": "^7.4.0",
     "cors": "^2.8.5",
     "nodemon": "^2.0.7",
-    "typescript": "^4.1.5"
+    "typescript": "^4.1.5",
+    "@types/node": "^14.14.31"
   }
 }
